# ocean

./: CMakeLists.txt  README.md
include/: algae.hpp  entity.hpp  herbivore.hpp  ocean.hpp  predator.hpp
include/utils/: logger.hpp  random.hpp
src/: algae.cpp  entity.cpp  herbivore.cpp  main.cpp  ocean.cpp  predator.cpp
